# scspin

./: .gitignore  LICENSE  README.md  README.tex.md
examples/aniso1/: README.md  input.json
source/: CMakeLists.txt  KahanSum.cpp  KahanSum.h  MarkovStateParameters.cpp  MolecularState.h  Parameters.cpp  RandomSampler.cpp  Simulation.cpp  Simulation.h  SpinState.h  SpinStateEvolver.h  sobol.cpp  sobol.h
source/unsupported/Eigen/: MatrixFunctions
src/: CMakeLists.txt  MarkovStateParameters.h  MolecularState.cpp  Parameters.h  RandomSampler.h  SimulationOptions.cpp  SimulationOptions.h  SpinState.cpp  SpinStateEvolver.cpp  main.cpp
